--- a/_config.yml
+++ b/_config.yml
@@ -90,3 +90,9 @@ defaults:
     values:
       layout: post
       read_time: true
+
+google_analytics: UA-127169212-2
+
+disqus:
+    shortname: parksunwoo
+
