--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 lang: ko-KR
-title: Basically Basic
+title: Django & Dev
 email: psw261@gmail.com
-description: "Django, 개발이야기"
+description: "Django, Dev"
 baseurl: # the optional subpath of your site, e.g. "/blog"
 url: "https://parksunwoo.github.io"
 author:
@@ -25,7 +25,7 @@ author:
   picture:
 twitter_username:
 github_username:
-logo: # path of site logo, e.g. "/assets/images/logo.png"
+logo: /assets/icons/django-dev-logo-light.png
 search: true
 search_full_content: true
 search_provider: lunr
@@ -34,6 +34,10 @@ algolia:
   index_name: # YOUR_INDEX_NAME
   search_only_api_key: # YOUR_SEARCH_ONLY_API_KEY
   powered_by: # true (default), false
+
+# Liquid
+liquid:
+  error_mode: strict
 
 # Build settings
 markdown: kramdown
@@ -84,15 +88,16 @@ defaults:
       layout: post
       read_time: true
   # _recipes
-  - scope:
-      path: "_recipes"
-      type: recipes
-    values:
-      layout: post
-      read_time: true
+#  - scope:
+#      path: "_recipes"
+#      type: recipes
+#    values:
+#      layout: post
+#      read_time: true
 
 google_analytics: UA-127169212-2
 
 disqus:
     shortname: parksunwoo
 
+copyright: "© 2020 Django Dev."
