--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 lang: ko-KR
-title: 세상을 읽다, 코드로 쓰다
+title: Read the world Write code.
 email: psw261@gmail.com
 description: "A developer's blog"
 baseurl: # the optional subpath of your site, e.g. "/blog"
@@ -22,10 +22,10 @@ url: "https://parksunwoo.github.io"
 author:
   name: Sunwoo Park
   twitter:
-  picture: /assets/images/replicate-prediction-co73sc4t5jhwdazxblpzgkjnga.png
+  picture: /assets/images/replicate-prediction-bjqmfly3h5a65nryq6jxye2zrm.jpg
 twitter_username:
 github_username:
-logo: /assets/icons/replicate-prediction-g4xq6uz5m5cfxloc5uni2o7dci.png
+logo: /assets/icons/1664840650178.png
 search: true
 search_full_content: true
 search_provider: lunr
@@ -101,4 +101,4 @@ google_analytics: UA-127169212-2
 disqus:
     shortname: parksunwoo
 
-copyright: "© 2020 세상을 읽다, 코드로 쓰다."
+copyright: "© 2020 Read the world Write code."
