--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -23,7 +23,7 @@ t:
   of: "of"
   min_read: "min read"
   present: "Present"
-  cv_awards: "Awards"
+  cv_awards: "Other Experience"
   cv_summary_contact: "Contact"
   cv_summary_contact_email: "Email"
   cv_summary_contact_phone: "Phone"
